<resources>

    <!-- APP -->
    <string name="app_name">JsonCrypt</string>
    <string name="app_about">Encrypt and decrypt JSON files locally on your device.</string>
    <string name="app_disclaimers">⚠️ This app is intended as a temporary encrypted data store. <u>Please read all our disclaimers before you begin.</u></string>

    <!-- CONTENT -->
    <string name="content_erase_confirm">"Are you sure you want to erase {0}?"</string>

    <!-- FRAGMENTS -->
    <string name="fragment_decrypt">Decrypt</string>
    <string name="fragment_encrypt">Encrypt</string>

    <!-- PUT EXTRAS -->
    <string name="putExtra_fragment">fragment</string>
    <string name="putExtra_json">json</string>
    <string name="putExtra_filePath">filePath</string>

    <!-- ELEMENTS -->
    <string name="action_settings">Settings</string>
    <string name="button_file">Select File</string>
    <string name="text_password">Password</string>
    <string name="button_encrypt">Encrypt</string>
    <string name="button_decrypt">Decrypt</string>
    <string name="button_feedback">Feedback</string>
    <string name="button_privacy">Privacy</string>
    <string name="button_acknowledge">Acknowledge &amp; Continue</string>
    <string name="action_erase">Erase File</string>
    <string name="action_about">About</string>
    <string name="action_close">Lock and Leave</string>
    <string name="input_searchvalues">Search values...</string>
    <string name="message_arguments_error">Please fill out everything first.</string>
    <string name="message_encrypt_error">Could not encrypt.</string>
    <string name="message_decrypt_error">Could not decrypt.</string>


    <!-- URLS -->
    <string name="url_github">https://github.com/whirledsol/JsonCryptApp</string>
    <string name="url_privacy">https://github.com/whirledsol/JsonCryptApp/wiki/Privacy-Policy</string>

    <!-- PREFERENCES -->
    <string name="pref_user_acknowledged">user_acknowledged</string>
</resources>