<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="192dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/logo_512"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="32sp"
                android:layout_margin="16dp"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_about"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"
            />
            <TextView
                android:id="@+id/text_disclaimers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_disclaimers"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"
            />
            <Button
                android:id="@+id/button_acknowledge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="20sp"
                android:text="@string/button_acknowledge" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="32dp"
            >
                <Button
                    android:id="@+id/button_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:text="@string/button_feedback" />
                <Button
                    android:id="@+id/button_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:text="@string/button_privacy" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>

</LinearLayout>